--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
